--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@ Terminal
 <div class=footer__inner>
 <div class=copyright>
 <span>© 2022 Powered by <a href=http://gohugo.io>Hugo</a></span>
-<span>:: Theme made by <a href=https://twitter.com/panr>panr</a></span>
+<!--<span>:: Theme made by <a href=https://twitter.com/panr>panr</a></span>-->
 </div>
 </div>
 </footer>
