--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <title>SDMinev</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="A simple, retro theme for Hugo">
+<meta name=description content="I do IT stuff">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <link rel=canonical href=/>
@@ -17,14 +17,14 @@
 <meta name=twitter:creator content>
 <meta property="og:locale" content="en">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Terminal">
-<meta property="og:description" content="A simple, retro theme for Hugo">
+<meta property="og:title" content="SDMinev">
+<meta property="og:description" content="I do IT stuff">
 <meta property="og:url" content="/">
-<meta property="og:site_name" content="Terminal">
+<meta property="og:site_name" content="SDMinev">
 <meta property="og:image" content="/img/favicon/red.png">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
-<link href=/index.xml rel=alternate type=application/rss+xml title=Terminal>
+<link href=/index.xml rel=alternate type=application/rss+xml title=SDMinev>
 </head>
 <body class=red>
 <div class="container headings--one-size">
@@ -33,7 +33,7 @@
 <div class=header__logo>
 <a href=/>
 <div class=logo>
-Terminal
+SDMinev
 </div>
 </a>
 </div>
@@ -52,9 +52,6 @@ Terminal
 </header>
 <div class=content>
 <div class=posts>
-  {{ range ( where .Site.RegularPages "Type" "posts" | first 3 ) }}
-  <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-{{end}}
 <div class=pagination>
 <div class=pagination__buttons>
 </div>
