--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 <link href=/index.xml rel=alternate type=application/rss+xml title=SDMinev>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 </head>
 <body class=red>
 <div class="container headings--one-size">
