--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <link rel=canonical href=/>
 <link rel=stylesheet href=/assets/style.css>
 <link rel=stylesheet href=/assets/red.css>
+  <link rel=text/javascript href=/assets/prism.js>
 <link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
 <link rel="shortcut icon" href=/img/favicon/red.png>
 <meta name=twitter:card content="summary">
